[gd_scene load_steps=4 format=2]

[ext_resource path="res://Modules/menus/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Modules/menus/theming/basic_theme.tres" type="Theme" id=2]
[ext_resource path="res://Modules/menus/ui_sounds/UiSoundPack.tscn" type="PackedScene" id=3]

[node name="PauseMenu" type="Popup"]
pause_mode = 2
margin_right = 133.0
margin_bottom = 124.0
theme = ExtResource( 2 )
popup_exclusive = true
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.701961, 0.701961, 0.701961, 0.74902 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 133.0
margin_bottom = 28.0
size_flags_vertical = 7
text = "Pause Menu"
align = 1
valign = 1

[node name="BtnResume" type="Button" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 133.0
margin_bottom = 60.0
size_flags_vertical = 3
text = "Resume"

[node name="UiSoundPack" parent="VBoxContainer/BtnResume" instance=ExtResource( 3 )]

[node name="BtnOptions" type="Button" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 133.0
margin_bottom = 92.0
size_flags_vertical = 3
text = "Options"

[node name="UiSoundPack2" parent="VBoxContainer/BtnOptions" instance=ExtResource( 3 )]

[node name="BtnMainMenu" type="Button" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 133.0
margin_bottom = 124.0
size_flags_vertical = 3
text = "MainMenu"

[node name="UiSoundPack3" parent="VBoxContainer/BtnMainMenu" instance=ExtResource( 3 )]

[connection signal="about_to_show" from="." to="." method="_on_PauseMenu_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_PauseMenu_popup_hide"]
[connection signal="pressed" from="VBoxContainer/BtnResume" to="." method="_on_BtnResume_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnOptions" to="." method="_on_BtnOptions_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnMainMenu" to="." method="_on_BtnMainMenu_pressed"]
